修改文件表格

--- a/admin/view/default/nodes/listnode.html
+++ b/admin/view/default/nodes/listnode.html
@@ -37,11 +37,11 @@ function checkNode(node)
 <div id="container">
 {{$msg}}
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
-<div align='left'>&nbsp;&nbsp;
-[<a href='?c=nodes&a=flush'>更新配置文件</a>] 
-</div>
   <div id="main" class="wid">
-    <table width="725" cellpadding=0 cellspacing=1 id="table">
+  <table width="100%" align="center" cellspacing="3">
+<tr><td>[<a href='?c=nodes&a=flush'>更新配置文件</a>]</td></tr>
+    </table>
+    <table width="90%" align="center" cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
         <td bgcolor='#efefef' class='color01 right'>操作</td>
         <td bgcolor='#efefef' class='color01 right'>状态</td>
