--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -1,9 +1,8 @@
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/left.css" type="text/css" media="all" />
-
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/public.css" type="text/css" media="all" />
 <table cellpadding="0" cellspacing="0" class="lefttd">
 <tr><td width="154">
 <script type="text/javascript">
-
 function SwitchMenu(obj,sty)
 {
 }
