--- a/vhost/view/default/domain/add.html
+++ b/vhost/view/default/domain/add.html
@@ -2,45 +2,24 @@
 <div class="topimg">{{if $action=='add'}}增加域名绑定{{else}}修改域名绑定{{/if}}</div>
   <div id="main" class="wid">
   <form name='nodeform' action="?c=domain&a={{$action}}" method="post">
-    <table align="center" border="0" cellpadding="0" cellspacing="10" width="70%">
-<tr>
-  <td>
-     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
-       <tr>
-  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　增加域名绑定</span></font></td>
+<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="65%">
+	<tr>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">增加域名绑定</font></td>
 	</tr>
-	</table>
-	</td>
-</tr>
   <tr>
     <td>
-<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
+<table width="100%" border="0" cellpadding="0" cellspacing="1" id="td5">
   <tr>
-    <td bgcolor="#ffffff" width="9%" height="30">
-<table width="100%" height="120" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
-      <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
-        </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" width="189" class="color01 right">　域名绑定：</td>
+    <td width="30%" height="25" class="color01 right" id="td4">域名绑定：</td>
         <td width="423" bgcolor="#fafaf5">
           <input type='text' name='domain' id='domain' value="{{$domain.domain}}" onBlur="checkName();"></td>
-        <td width="236" bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+       </tr>
       <tr>
-        <td bgcolor="#f5f5f5">　</td>
-        <td bgcolor="#fafaf5"><button type="submit">确定</button></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-	    <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
-        </tr>
-    </table></td>
-      </tr>
+        <td id="td4" colspan="2" align="center"><button type="submit">确定</button></td>
+       </tr>
     </table></td>
   </tr>
 </table>
   </form>
-
   </div>
 </div>
