--- a/vhost/view/default/kfinfo.html
+++ b/vhost/view/default/kfinfo.html
@@ -12,9 +12,8 @@
   </tr>
   <tr>
 
-    <td id="td3" class="color01 right">&nbsp;服务器</td>
-    <td>&nbsp;名称: {{$user.node}} , 地址: {{$node_host}}</td>
-
+    <td id="td3" class="color01 right">服务器</td>
+    <td id="td4">名称: {{$user.node}} , 地址: {{$node_host}}</td>
   </tr>
   <tr>
     <td id="td3" class="color01 right">产品名称</td>
