--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -36,8 +36,8 @@
         <td id="td4"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
       </tr>
 	  <tr>
-        <td id="td3" class="color01 right">产品ID</td>
-        <td id="td4">{{$row.product_id}}</td>
+        <td id="td3" class="color01 right">产品名称</td>
+        <td id="td4">{{$row.product_name}}</td>
 	  </tr>
 	   <tr>
         <td id="td3"  class="color01 right">所在服务器</td>
