--- a/user/view/default/vhostproduct/showVhostProduct.html
+++ b/user/view/default/vhostproduct/showVhostProduct.html
@@ -16,7 +16,7 @@
       <tr>
         <td class="right"> [<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}" title="更改信息">续费</a>][升级][<a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" >管理</a>]</td>
         <td class="right"><a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" >{{$row.name}}</a></td>
-		<td class="right">{{$row.product_id}}</td>
+		<td class="right">{{$row.product_name}}</td>
 		<td class="right">{{$row.node}}</td>
 		<td class="right">{{$row.create_time}}</td>
 		<td class="right">{{$row.expire_time}}</td>
