--- a/vhost/view/default/kfinfo.html
+++ b/vhost/view/default/kfinfo.html
@@ -17,7 +17,7 @@
   </tr>
   <tr>
     <td id="td3" class="color01 right">产品名称</td>
-    <td id="td4">{{$user.product_id}}</td>
+    <td id="td4">{{$user.product_name}}</td>
   </tr>
   <tr>
     <td id="td3" class="color01 right">创建时间</td>
