--- a/vhost/view/default/changePassword.html
+++ b/vhost/view/default/changePassword.html
@@ -14,39 +14,36 @@ function checkPassword()
 	frm.submit();
 }
 </script>
-<div class="topimg">当前位置：修改密码</div>
 <div id="container">
 <div class="topimg"></div>
   <div id="main" class="wid">
   <form name='frm' action="?c=session&a=changePassword" method="post">
-<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="80%">
-	<tr>
-  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">修改密码</font></td>
-	</tr>
-  <tr>
-    <td>
-<table width="100%" height="100" border="0" cellpadding="0" cellspacing="1" id="td5">
+
+<table width="60%" height="100" border="0" cellpadding="0" cellspacing="1" id="td5">
       <tr>
-        <td id="td3" class="color01 right">旧密码：</td>
-        <td id="td4">
-          <input type='password' name='oldpasswd' id='oldpasswd' ></td>
-         </tr>
-      <tr>
-        <td id="td3" class="color01 right">新密码：</td>
-        <td id="td4"><input type='password' name='passwd' id='passwd' ></td>
+        <td width="35%" class="color01 right" id="td3">FTP新密码：</td>
+        <td width="65%" id="td4"><input type='password' name='passwd' id='passwd' >
+         <input type='submit' value='确定'/></td>
        </tr>
-      <tr>
-        <td id="td3" class="color01 right">确认新密码：</td>
-        <td id="td4"><input type='password' name='passwd2' id='passwd2'></td>
-       </tr>
-      <tr>
-         <td colspan="2" align="center" class="color01 right" id="td3"><button type="button" onClick="checkPassword()">确定</button></td>
-      </tr>
-    </table></td>
-  </tr>
-</table>
+    </table>
   </form>
   </div>
 </div>
+{{if $db_limit}}
+<div id="container">
+  <div id="main" class="wid">
+  <form name='frm' action="?c=session&a=changeDbPassword" method="post">
+
+<table width="60%" height="100" border="0" cellpadding="0" cellspacing="1" id="td5">
+      <tr>
+        <td width="35%" class="color01 right" id="td3">数据库新密码：</td>
+        <td width="65%" id="td4"><input type='password' name='passwd' id='passwd' >
+          <input type='submit' value='确定'/></td>
+       </tr>
+    </table>
+  </form>
+  </div>
+</div>
+{{/if}}
 </body>
 {{include file='common/foot.html'}}
