--- a/admin/view/default/user/moneyedit.html
+++ b/admin/view/default/user/moneyedit.html
@@ -10,11 +10,11 @@
         <td width="168">{{$user.username}}</td>
       </tr>
       <tr>
-        <td class='color01 right' bgcolor='#efefef'>当前余额(分)</td>
-        <td>{{$user.money}}</td>
+        <td class='color01 right' bgcolor='#efefef'>当前余额</td>
+        <td>{{$user.money/100}}元</td>
       </tr>
       <tr>
-        <td class='color01 right' bgcolor='#efefef'>增减余额(分)<br></td>
+        <td class='color01 right' bgcolor='#efefef'>增减余额(元)<br></td>
         <td><input name='money' id="money" value="0"/></td>
       </tr>
 	   <tr>
