--- a/admin/view/default/user/userlist.html
+++ b/admin/view/default/user/userlist.html
@@ -2,7 +2,7 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 <div class="topimg">
-  <form name="form1" method="post" action="?c={{$smarty.request.c}}&a={{$smarty.request.a}}">
+  <form name="form1" method="post" action="?c={{$smarty.request.c}}&a=listUser">
     用户名:
     <input name="username" type="text" id="username" value="{{$username}}">
     <input type="submit" name="Submit" value="搜索">
@@ -47,8 +47,8 @@
         <td id="td4">{{$row.regtime}}</td>
         </tr>
 	  <tr>
-        <td id="td3" class="color01 right">余额(分)</td>
-        <td id="td4"><a href="?c=user&a=editMoneyForm&username={{$row.username}}">{{$row.money}}</a></td>
+        <td id="td3" class="color01 right">余额</td>
+        <td id="td4"><a href="?c=user&a=editMoneyForm&username={{$row.username}}">{{$row.money/100}}元</a></td>
         </tr>
 	    </table></td>
   </tr>
