--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -68,8 +68,8 @@ function changeNode()
         <td id="td4"><input name="db_quota" type="text" id="db_quota" value="{{$vhostproduct.db_quota}}"></td>
         </tr>
 	  <tr>
-        <td id="td3" class="color01 right">价格(分/年)</td>
-        <td id="td4"><input name="price" type="text" id="price" value="{{$vhostproduct.price}}"></td>
+        <td id="td3" class="color01 right">价格(元/年)</td>
+        <td id="td4"><input name="price" type="text" id="price" value="{{$vhostproduct.price/100}}"></td>
         </tr>
 	  <tr>
         <td id="td3" class="color01 right">模板</td>
