--- a/user/view/default/vhostproduct/list.html
+++ b/user/view/default/vhostproduct/list.html
@@ -5,7 +5,7 @@
     <table cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
         <td  bgcolor='#efefef' class='color01 right'>操作</td>
-	   <td  bgcolor='#efefef' class='color01 right'>ftp用户名</td>
+	   <td  bgcolor='#efefef' class='color01 right'>用户名</td>
 	   <td bgcolor='#efefef' class='color01 right'>产品</td>
 	   <td bgcolor='#efefef' class='color01 right'>服务器</td>
 	   	<td bgcolor='#efefef' class='color01 right'>购买时间</td>
@@ -14,7 +14,9 @@
       </tr>
 	  {{foreach from=$list item=row}}
       <tr>
-        <td class="right"> [<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}" title="更改信息">续费</a>][升级][<a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" >管理</a>]</td>
+        <td class="right"> 
+        [<a href="?c=vhostproduct&a=renewForm&name={{$row.name}}" >续费</a>]
+        [<a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" >控制面板</a>]</td>
         <td class="right"><a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" >{{$row.name}}</a></td>
 		<td class="right">{{$row.product_name}}</td>
 		<td class="right">{{$row.node}}</td>
