完成续费功能

--- a/user/view/default/vhostproduct/renew.html
+++ b/user/view/default/vhostproduct/renew.html
@@ -11,7 +11,7 @@ function check_user()
 <div id="container">
 <div class="topimg">购买虚拟主机产品</div>
   <div id="main" class="wid">
-  <form name='vhostform' action="?c=product&a=renew&product_id={{$product.id}}&product_type=vhost&param={{$name}}" method="post">
+  <form name='vhostform' action="?c=product&a=renew&product_id={{$product.id}}&product_type=vhost&name={{$name}}" method="post">
     <table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
   <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">购买虚拟主机产品</font></td>
