--- a/user/view/default/vhostproduct/sell.html
+++ b/user/view/default/vhostproduct/sell.html
@@ -5,7 +5,7 @@ function show(url)
 }
 function check_user()
 {
-	show('?c=product&a=check&product_type=vhost&param='+document.vhostform.param.value);
+	show('?c=product&a=check&product_type=vhost&name='+document.vhostform.name.value);
 }
 
 </script>
@@ -26,7 +26,7 @@ function check_user()
         </tr>
       <tr>
         <td bgcolor="#f5f5f5" class="color01 right">　FTP用户名：</td>
-        <td bgcolor="#fafaf5"><input name="param" type="text" id="param">
+        <td bgcolor="#fafaf5"><input name="name" type="text" id="name">
 		    <input type="button" name="Submit" value="检测用户名" onClick="check_user()"></td>
       </tr>
       <tr>
