--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -13,7 +13,7 @@
   <form  action="?c=adminuser&a=insert" method='post'>
     <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
-  <td height="30" id="td2" colspan="2"><font color="#FFFFFF">　增加管理员</font></td>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">增加管理员</font></td>
 	</tr>
   <tr>
     <td>
