--- a/admin/view/default/style/style.css
+++ b/admin/view/default/style/style.css
@@ -315,6 +315,16 @@ padding-left:6px;
 float:left;
 padding:5px;
 }
+#tb_bgc {
+background:#7FBBF4;
+}
+#tb_bgc2 {
+background:#51A3EC;
+}
+#tb_bgc3 {
+background:#C7EAF6;
+}
+
 #td1 {
 background:#7FBBF4;
 }
@@ -330,8 +340,10 @@ background:#fafaf5;
 #td5 {
 background:#C7EAF6;
 }
+
 .color01 a {color: #fff;}
 .color01 a:visited {color: #fff;}
 .color01 a:hover {color: red;text-decoration: underline;
 }
+
 
