--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -18,13 +18,13 @@ function checkPassword()
 <div class="topimg"></div>
   <div id="main" class="wid">
     <form name='frm' action="?c=session&a=changePassword" method="post">
-	<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
+	<table align="center" id="tb_bgc" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
-  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">修改密码</font></td>
+  <td height="30" id="tb_bgc2" colspan="2" class="color01 right"><font color="#FFFFFF">修改密码</font></td>
 	</tr>
   <tr>
     <td>
-<table width="100%" height="130" border="0" cellpadding="0" cellspacing="1" id="td5">
+<table width="100%" height="130" border="0" cellpadding="0" cellspacing="1" id="tb_bgc3">
       <tr>
         <td id="td3" width="189" class="color01 right">旧密码：</td>
         <td width="423" id="td4">
