--- a/user/view/default/frame/top.html
+++ b/user/view/default/frame/top.html
@@ -7,8 +7,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="utf-8" />
 <!-- 定义链接样式表 -->
-<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/style.css" type="text/css" media="all" />
-<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/header.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/style.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/header.css" type="text/css" media="all" />
 <base target="content" />
 </head>
 <body>
