--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/left.css" type="text/css" media="all" />
-<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/public.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/public.css" type="text/css" media="all" />
 <table cellpadding="0" cellspacing="0" class="lefttd">
 <tr><td width="154">
 <script type="text/javascript">
@@ -8,7 +8,7 @@ function SwitchMenu(obj,sty)
 }
 </script>
 <div id="masterdiv">
-	<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu">
+	<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu" >
 	  帐户管理
 	</h1>
 	<ul class="submenu" id="sub5" >
