修改了表格css样式

--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -1,4 +1,5 @@
 ﻿{{include file='common/head.html'}}
+{{include file='common/head2.html'}}
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
 <script language="javascript">
 function checkPassword()
@@ -18,36 +19,33 @@ function checkPassword()
 <div class="topimg"></div>
   <div id="main" class="wid">
     <form name='frm' action="?c=session&a=changePassword" method="post">
-	<table align="center" id="tb_bgc" border="0" cellpadding="0" cellspacing="1" width="70%">
-	<tr>
-  <td height="30" id="tb_bgc2" colspan="2" class="color01 right"><font color="#FFFFFF">修改密码</font></td>
-	</tr>
-  <tr>
-    <td>
-<table width="100%" height="130" border="0" cellpadding="0" cellspacing="1" id="tb_bgc3">
+<div class="head_block">&nbsp;修改密码</div>
+<div class="block">
+<table id="table_2" border="0" cellpadding="0" cellspacing="1" >
       <tr>
-        <td id="td3" width="189" class="color01 right">旧密码：</td>
-        <td width="423" id="td4">
+        <td class="td_bgc right_2">旧密码：</td>
+        <td class="td_bgc">
           <input type='password' name='oldpasswd' id='oldpasswd'></td>
         </tr>
       <tr>
-        <td id="td3" class="color01 right">新密码：</td>
-        <td id="td4"><input type='password' name='passwd' id='passwd' ></td>
+        <td class="td_bgc right_2">新密码：</td>
+        <td class="td_bgc"><input type='password' name='passwd' id='passwd' ></td>
         </tr>
       <tr>
-        <td id="td3" class="color01 right">确认新密码：</td>
-        <td id="td4"><input type='password' name='passwd2' id='passwd2'></td>
+        <td class="td_bgc right_2">确认新密码：</td>
+        <td class="td_bgc"><input type='password' name='passwd2' id='passwd2'></td>
         </tr>
 	    <tr>
-	    <td height="20" id="td3" colspan="2">
+	    <td class="td_bgc" colspan="2" align="center">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
-		  <tr><td width="200" height="40"></td>
-		  <td><button type="submit">增加</button></td></tr></table></td>
+		  <tr><td width="250" height="30"></td>
+		  <td><button type="submit">增加</button></td></tr></table>
+		</td>
         </tr>
-
     </table></td>
   </tr>
 </table>
+</div>
 	</form>
   </div>
 </div>
