--- a/admin/view/default/adminuser/userlist.html
+++ b/admin/view/default/adminuser/userlist.html
@@ -1,8 +1,9 @@
 {{include file='common/head.html'}}
+{{include file='common/head2.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
-  <div id="main" class="wid">
+<div align="center">
+  <div class="tb_wid2">
     <table cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
         <td class='color01 right' bgcolor='#efefef'>用户名</td>
@@ -17,8 +18,6 @@
       </tr>
 	  {{/foreach}}
     </table>
-    <div align="left">
-	</div>
   </div>
 </div>
 </body>
