--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -15,39 +15,33 @@ function checkPassword()
 	frm.submit();
 }
 </script>
-<div id="container">
+<div align="center">
 <div class="topimg"></div>
-  <div id="main" class="wid">
     <form name='frm' action="?c=session&a=changePassword" method="post">
-<div class="head_block">&nbsp;修改密码</div>
-<div class="block">
-<table id="table_2" border="0" cellpadding="0" cellspacing="1" >
+<div class="head_block tb_wid">&nbsp;修改密码</div>
+<div class="block tb_wid">
+<table id="table_2" cellpadding="0" cellspacing="1" >
       <tr>
         <td class="td_bgc right_2">旧密码：</td>
         <td class="td_bgc">
-          <input type='password' name='oldpasswd' id='oldpasswd'></td>
+          <input type='password' name='oldpasswd' id='tb_wid3'></td>
         </tr>
       <tr>
         <td class="td_bgc right_2">新密码：</td>
-        <td class="td_bgc"><input type='password' name='passwd' id='passwd' ></td>
+        <td class="td_bgc"><input type='password' name='passwd' id='tb_wid3' ></td>
         </tr>
       <tr>
         <td class="td_bgc right_2">确认新密码：</td>
-        <td class="td_bgc"><input type='password' name='passwd2' id='passwd2'></td>
+        <td class="td_bgc"><input type='password' name='passwd2' id='tb_wid3'></td>
         </tr>
 	    <tr>
-	    <td class="td_bgc" colspan="2" align="center">
-		<table width="100%" border="0" cellpadding="0" cellspacing="0">
-		  <tr><td width="250" height="30"></td>
-		  <td><button type="submit">增加</button></td></tr></table>
+	    <td class="td_bgc td_hg" colspan="2" align="center">
+		<input type="submit" value="增加">
 		</td>
         </tr>
-    </table></td>
-  </tr>
-</table>
+    </table>
 </div>
 	</form>
   </div>
-</div>
 </body>
 {{include file='common/foot.html'}}
