--- a/user/view/default/session/changePassword.html
+++ b/user/view/default/session/changePassword.html
@@ -1,4 +1,5 @@
-﻿<script language="javascript">
+﻿{{include file='common/head2.html'}}
+<script language="javascript">
 function checkPassword()
 {
 	if(frm.passwd.value==""){
@@ -12,36 +13,28 @@ function checkPassword()
 	frm.submit();
 }
 </script>
-<div class="topimg">当前位置：帐号管理 -> 修改密码</div>
-<div id="container">
-  <div id="main" class="wid">
+<div align="center">
   <form name='frm' action="?c=session&a=changePassword" method="post">
-    <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="80%">
-	<tr>
-  <td height="30" id="td2" colspan="2"><font color="#FFFFFF">　修改资料</span></font></td>
-	</tr>
-  <tr>
-    <td>
-<table width="100%" height="120" border="0" cellpadding="0" cellspacing="1" id="td5">
+<div class="head_block tb_wid">&nbsp;修改密码</div>
+<div class="block tb_wid">
+<table id="table_2" cellpadding="0" cellspacing="1">
 	  <tr>
-        <td class="color01 right" id="td3">旧密码：</td>
-        <td id="td4"><input type='password' name='oldpasswd' id='oldpasswd' ></td>
+        <td class="td_bgc right_2">旧密码：</td>
+        <td class="td_bgc"><input type='password' name='oldpasswd' ></td>
 	  </tr>
 	  <tr>
-        <td id="td3" class="color01 right">新密码：</td>
-        <td id="td4"> <input type='password' name='passwd' id='passwd' ></td>
+        <td class="td_bgc right_2">新密码：</td>
+        <td class="td_bgc"><input type='password' name='passwd' ></td>
         </tr>
 	  <tr>
-        <td id="td3" class="color01 right">确认新密码：</td>
-        <td id="td4"><input type='password' name='passwd2' id='passwd2'></td>
+        <td class="td_bgc right_2">确认新密码：</td>
+        <td class="td_bgc"><input type='password' name='passwd2' ></td>
 	  </tr>
 	    <tr>
-	    <td id="td3" colspan="2" align="center"><button type="button" onClick="checkPassword()">确定</button></td>
+	    <td class="td_bgc td_hg" colspan="2" align="center"><input type="button" onClick="checkPassword()" value="确定"></td>
         </tr>
-
-    </table></td>
-  </tr>
-</table>
+    </table>
+ </div>
   </form>
   </div>
-</div>
+
