--- a/admin/view/default/user/userlist.html
+++ b/admin/view/default/user/userlist.html
@@ -1,4 +1,5 @@
 {{include file='common/head.html'}}
+{{include file='common/head2.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 <div class="topimg">
@@ -11,48 +12,42 @@
   {{if $msg}}<font color='red'>{{$msg}}</font>{{/if}}
   {{if $sum>0}}
   <div id="main" class="wid"> 
-    <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="80%">
   {{foreach from=$list item=row}}
-	<tr>
-  <td height="30" id="td2" colspan="2"><font color="#FFFFFF">　用户查询</font></td>
-	</tr>
-  <tr>
-    <td>
-<table width="100%" height="210" border="0" cellpadding="0" cellspacing="1" id="td5">
+<div class="head_block tb_wid2">&nbsp;用户查询</div>
+<div class="block tb_wid2">
+<table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
-        <td id="td4" colspan="2" align="center">
+        <td class="td_bgc td_hg" colspan="2" align="center">
         [<a href="?c=user&a=editForm&username={{$row.username}}" title="更改信息">更改</a>]
         [<a href='javascript:if(confirm("真的要重设用户密码吗")){ window.location="?c=user&a=randPassword&username={{$row.username}}";}'>重设密码</a>]
         [<a href="?c=user&a=impLogin&username={{$row.username}}" target="_blank">模拟登录</a>]
         </td>
         </tr>
       <tr>
-        <td width="189" class="color01 right" id="td3">用户名：</td>
-        <td id="td4"><a href="?c=user&a=editForm&username={{$row.username}}">{{$row.username}}</a></td>
+        <td class="td_bgc right_2">用户名：</td>
+        <td class="td_bgc"><a href="?c=user&a=editForm&username={{$row.username}}">{{$row.username}}</a></td>
         </tr>
       <tr>
-        <td id="td3" class="color01 right">真实姓名：</td>
-        <td id="td4">{{$row.name}}</td>
+        <td class="td_bgc right_2">真实姓名：</td>
+        <td class="td_bgc">{{$row.name}}</td>
         </tr>
 	  <tr>
-        <td id="td3" class="color01 right">身份号码</td>
-        <td id="td4">{{$row.id}}</td>
+        <td class="td_bgc right_2">身份号码</td>
+        <td class="td_bgc">{{$row.id}}</td>
         </tr>
 	  <tr>
-        <td id="td3" class="color01 right">电子邮件</td>
-        <td id="td4">{{$row.email}}</td>
+        <td class="td_bgc right_2">电子邮件</td>
+        <td class="td_bgc">{{$row.email}}</td>
         </tr>
 	  <tr>
-        <td id="td3" class="color01 right">注册时间</td>
-        <td id="td4">{{$row.regtime}}</td>
+        <td class="td_bgc right_2">注册时间</td>
+        <td class="td_bgc">{{$row.regtime}}</td>
         </tr>
 	  <tr>
-        <td id="td3" class="color01 right">余额</td>
-        <td id="td4"><a href="?c=user&a=editMoneyForm&username={{$row.username}}">{{$row.money/100}}元</a></td>
+        <td class="td_bgc right_2">余额</td>
+        <td class="td_bgc"><a href="?c=user&a=editMoneyForm&username={{$row.username}}">{{$row.money/100}}元</a></td>
         </tr>
-	    </table></td>
-  </tr>
-  {{/foreach}}
+	    {{/foreach}}
 </table>
  </div>
 </div>
