--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -1,4 +1,5 @@
 ﻿{{include file='common/head.html'}}
+{{include file='common/head2.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <script language='javascript' src='{{$PSTATIC}}/style/common.js'></script>
 <script language='javascript'>
@@ -43,6 +44,7 @@ function changeNode(id,templete)
 <div id="container">
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
   <div id="main" class="wid">
+  <div align="left">
   <form action='?c={{$smarty.request.c}}&a={{$smarty.request.a}}' method='post' name='product_form'>
   <select name='product_flag' onChange="javascript:product_form.submit();">
   <option value='0' {{if $product_flag==0}}selected{{/if}}>所有产品</option>
@@ -50,6 +52,7 @@ function changeNode(id,templete)
   <option value='2' {{if $product_flag==2}}selected{{/if}}>可销售产品</option>
   </select>
   </form>
+  </div>
     <table cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
           <td class='color01 right' bgcolor='#efefef'>操作</td>
