--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -1,33 +1,28 @@
-<div><br></div>
-<div class="topimg">当前位置：帐号管理 -> 帐户信息</div>
-<div><br></div>
-<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
-	<tr>
-  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">帐户信息</font></td>
-	</tr>
-  <tr>
-    <td>
-<table width="100%" height="150" border="0" cellpadding="0" cellspacing="1" id="td5">
+{{include file='common/head2.html'}}
+<div align="center">
+<div class="head_block tb_wid">&nbsp;帐户信息</div>
+<div class="block tb_wid">
+<table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
-        <td id="td3" width="189" class="color01 right">用户名：</td>
-        <td width="423" id="td4">{{$user.username}}</td>
+        <td class="td_bgc right_2">用户名：</td>
+        <td class="td_bgc">{{$user.username}}</td>
         </tr>
       <tr>
-        <td id="td3" class="color01 right">姓名：</td>
-        <td id="td4">{{$user.name}}</td>
+        <td class="td_bgc right_2">姓名：</td>
+        <td class="td_bgc">{{$user.name}}</td>
       </tr>
       <tr>
-        <td id="td3" class="color01 right">身份证：</td>
-        <td id="td4">{{$user.id}}</td>
+        <td class="td_bgc right_2">身份证：</td>
+        <td class="td_bgc">{{$user.id}}</td>
       </tr>
 	  <tr>
-        <td id="td3" class="color01 right">电子邮件</td>
-        <td id="td4">{{$user.email}}</td>
+        <td class="td_bgc right_2">电子邮件</td>
+        <td class="td_bgc">{{$user.email}}</td>
 	  </tr>
 	  <tr>
-        <td id="td3" class="color01 right">账户余额(元)</td>
-        <td id="td4"> {{$user.money/100}}</td>
+        <td class="td_bgc right_2">账户余额(元)</td>
+        <td class="td_bgc"> {{$user.money/100}}</td>
         </tr>
-    </table></td>
-  </tr>
-</table>
+    </table>
+	</div>
+	</div>
