--- a/admin/view/default/user/userlist.html
+++ b/admin/view/default/user/userlist.html
@@ -13,7 +13,7 @@
   {{if $sum>0}}
   <div id="main" class="wid"> 
   {{foreach from=$list item=row}}
-<div class="head_block tb_wid2">&nbsp;用户查询</div>
+<div class="head_block tb_wid2">&nbsp;用户信息</div>
 <div class="block tb_wid2">
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
