--- a/vhost/view/default/changePassword.html
+++ b/vhost/view/default/changePassword.html
@@ -1,4 +1,5 @@
 ﻿{{include file='common/head.html'}}
+{{include file='common/head2.html'}}
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
 <script language="javascript">
 function checkPassword()
@@ -14,36 +15,36 @@ function checkPassword()
 	frm.submit();
 }
 </script>
-<div id="container">
-<div class="topimg"></div>
-  <div id="main" class="wid">
+<div align="center">
   <form name='frm' action="?c=session&a=changePassword" method="post">
-
-<table width="60%" height="100" border="0" cellpadding="0" cellspacing="1" id="td5">
+<div class="head_block tb_wid">&nbsp;修改FTP密码</div>
+<div class="block tb_wid">
+<table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
-        <td width="35%" class="color01 right" id="td3">FTP新密码：</td>
-        <td width="65%" id="td4"><input type='password' name='passwd' id='passwd' >
+        <td class="td_bgc right_2">FTP新密码：</td>
+        <td class="td_bgc right_2"><input type='password' name='passwd' id='passwd' >
          <input type='submit' value='确定'/></td>
        </tr>
     </table>
+	</div>
   </form>
   </div>
-</div>
 {{if $db_limit}}
-<div id="container">
-  <div id="main" class="wid">
+<div><br><br></div>
+<div align="center">
   <form name='frm' action="?c=session&a=changeDbPassword" method="post">
-
-<table width="60%" height="100" border="0" cellpadding="0" cellspacing="1" id="td5">
+<div class="head_block tb_wid">&nbsp;修改数据库存密码</div>
+<div class="block tb_wid">
+<table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
-        <td width="35%" class="color01 right" id="td3">数据库新密码：</td>
-        <td width="65%" id="td4"><input type='password' name='passwd' id='passwd' >
+        <td class="td_bgc right_2">数据库新密码：</td>
+        <td class="td_bgc right_2"><input type='password' name='passwd' id='passwd' >
           <input type='submit' value='确定'/></td>
        </tr>
     </table>
+	</div>
   </form>
   </div>
-</div>
 {{/if}}
 </body>
 {{include file='common/foot.html'}}
