--- a/vhost/view/default/domain/show.html
+++ b/vhost/view/default/domain/show.html
@@ -1,37 +1,30 @@
 ﻿{{include file='common/head.html'}}
+{{include file='common/head2.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-<div class="topimg">当前位置：绑定域名列表</div>
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
-  <div id="main" class="wid">
-  <table width='80%' align="center" >
+<div><br></div>
+<div align="center">
+  <table class="tb_wid4" align="center" >
   <tr><td>[<a href='?c=domain&a=addForm'>新增域名绑定</a>]</td></tr>
   </table>
-    <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="80%">
-	<tr>
-  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">绑定域名列表</font></td>
-	</tr>
-  <tr>
-    <td>
-<table width="100%" border="0" cellpadding="0" cellspacing="1" id="td5">
+	<div class="head_block tb_wid4">&nbsp;绑定域名列表员</div>
+<div class="block tb_wid4">
+<table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
-        <td width="189" height="25" class="color01 right" id="td4">域名</td>
-        <td id="td4">目录</td>
-        <td id="td4">操作</td>
+        <td class="td_bgc right_2">域名</td>
+        <td class="td_bgc right_2">目录</td>
+        <td class="td_bgc right_2">操作</td>
       </tr>
 	  {{foreach from=$list item=row}}
       <tr>
-        <td height="25" class="color01 right" id="td3">{{$row.name}}</td>
-        <td id="td4">{{$row.value}}</td>
-        <td id="td4">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=domain&a=del&domain={{$row.name}}';}" title="删除域名">删除</a>]</td>
+        <td class="td_bgc right_2">{{$row.name}}</td>
+        <td class="td_bgc right_2">{{$row.value}}</td>
+        <td class="td_bgc right_2">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=domain&a=del&domain={{$row.name}}';}" title="删除域名">删除</a>]</td>
       </tr>
 	  	  {{/foreach}}
-	    </table></td>
-  </tr>
-</table>
+	    </table>
     <div align="left">
 	</div>
-  </div>
 </div>
 </body>
 {{include file='common/foot.html'}}
