--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -27,24 +27,24 @@
 			   <font color=red>*必填</font></td>
         </tr>
 	  <tr>
-        <td class="td_bgc right_2">用户名：</td>
+        <td class="td_bgc right_2">管理用户名：</td>
         <td class="td_bgc"><input name="user" type="text" id='tb_wid3' value="{{$node.user}}">
 				   <font color=red>*必填</font></td>
         </tr>
 	  <tr>
-        <td class="td_bgc right_2">密码：</td>
+        <td class="td_bgc right_2">管理密码：</td>
         <td class="td_bgc"><input name="passwd" type="text" id='tb_wid3' value="{{$node.passwd}}">
             <font color=red>*必填</font></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">数据库管理账号：</td>
         <td class="td_bgc"><input name="db_user" type="text" id='tb_wid3' value="{{$node.db_user}}">
-            <font color=red>*必填</font></td>
+            </td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">数据库管理密码：</td>
         <td class="td_bgc"><input name="db_passwd" type="text" id='tb_wid3' value="{{$node.db_passwd}}">
-            <font color=red>*必填</font></td>
+           </td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">物理盘：</td>
