--- a/admin/view/default/nodes/listnode.html
+++ b/admin/view/default/nodes/listnode.html
@@ -60,7 +60,9 @@ function checkAllNode()
 </script>
 <div id="container">
 {{$msg}}
+<div class="padd mar_top">
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
+</div>
   <div id="main" class="wid">
   <table width="100%" align="center" cellspacing="3">
 <tr><td>[<a href='?c=nodes&a=flush'>更新配置文件</a>][<a href='javascript:checkAllNode()'>查询所有主机状态</a>]</td></tr>
