--- a/user/view/default/vhostproduct/sell.html
+++ b/user/view/default/vhostproduct/sell.html
@@ -67,7 +67,7 @@ function check_register()
         </tr>
 	    <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
-		<input type="submit" value="确定"></td>
+		<input type="button" onClick="check_register()" value="确定"></td>
         </tr>
     </table>
 	</div>
