--- a/vhost/view/default/changePassword.html
+++ b/vhost/view/default/changePassword.html
@@ -17,8 +17,8 @@ function checkPassword()
 </script>
 <div align="center">
   <form name='frm' action="?c=session&a=changePassword" method="post">
-<div class="head_block tb_wid">&nbsp;修改FTP密码</div>
-<div class="block tb_wid">
+<div class="head_block tb_wid2">&nbsp;修改FTP密码</div>
+<div class="block tb_wid2">
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">FTP新密码：</td>
@@ -33,8 +33,8 @@ function checkPassword()
 <div><br><br></div>
 <div align="center">
   <form name='frm' action="?c=session&a=changeDbPassword" method="post">
-<div class="head_block tb_wid">&nbsp;修改数据库存密码</div>
-<div class="block tb_wid">
+<div class="head_block tb_wid2">&nbsp;修改数据库存密码</div>
+<div class="block tb_wid2">
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">数据库新密码：</td>
