--- a/vhost/view/default/domain/show.html
+++ b/vhost/view/default/domain/show.html
@@ -1,14 +1,13 @@
 ﻿{{include file='common/head.html'}}
 {{include file='common/head2.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div class="topimg pal1">共计 {{$sum}} 条记录</div>
-<div><br></div>
 <div align="center">
-  <table class="tb_wid4" align="center" >
+  <table class="tb_wid2" align="center" >
+  <tr><td class="topimg mar_top">共计 {{$sum}} 条记录</td></tr>
   <tr><td>[<a href='?c=domain&a=addForm'>新增域名绑定</a>]</td></tr>
   </table>
-	<div class="head_block tb_wid4">&nbsp;绑定域名列表员</div>
-<div class="block tb_wid4">
+	<div class="head_block2 tb_wid2">&nbsp;绑定域名列表员</div>
+<div class="block tb_wid2">
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">域名</td>
