--- a/admin/view/default/adminuser/userlist.html
+++ b/admin/view/default/adminuser/userlist.html
@@ -1,7 +1,9 @@
 {{include file='common/head.html'}}
 {{include file='common/head2.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div class="topimg pal1">共计 {{$sum}} 条记录</div>
+<div class="padd2 mar_top">
+<div class="topimg">共计 {{$sum}} 条记录</div>
+</div>
 <div align="center">
   <div class="tb_wid2">
     <table cellpadding=0 cellspacing=1 id="table">
