--- a/style/style2.css
+++ b/style/style2.css
@@ -18,6 +18,15 @@
 	MARGIN-RIGHT: auto; 
 	MARGIN-LEFT: auto;
 }
+.head_block2 {
+	border: 1px solid #0099FF;
+	border-bottom-width:0px;
+	background-color:#51A3EC;
+	color:#FFFFFF;
+	padding-top:6px;
+	padding-bottom:6px;
+	text-align:left;
+}
 #table_2 {
 width:100%;
 border:0px;
@@ -43,6 +52,17 @@ background-color:#f5f5f5;
 }
 .right_2 {
 padding-left:10px;
+}
+.mar_top {
+margin-top:15px;
+margin-bottom:5px;
+line-height:30px;
+}
+.padd{
+padding-left:70px;
+}
+.padd2{
+padding-left:200px;
 }
 
 
