--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -41,7 +41,7 @@ function check_register()
       <tr>
         <td class="td_bgc right_2">用户：</td>
         <td class="td_bgc">
-         <input name='username' type='text' id="tb_wid3" onBlur="checkUsername();" value="" size="16"/><span class="color01 right">*</span>
+         <input name='username' type='text' id="tb_wid3" value="" size="16"/><span class="color01 right">*</span>
            <input type="button" name="Submit" id="tb_wid3" value="检测用户名" onClick="check_user()"></td>
         </tr>
       <tr>
