--- a/user/view/default/vhostproduct/list.html
+++ b/user/view/default/vhostproduct/list.html
@@ -1,5 +1,7 @@
 ﻿<div id="container">
-<div class="topimg pal1">共计 {{$sum}} 条记录</div>
+<div class="padd">
+<div class="topimg">共计 {{$sum}} 条记录</div>
+</div>
   <div id="main" class="wid">
     <table cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
