--- a/vhost/view/default/noframe.html
+++ b/vhost/view/default/noframe.html
@@ -1,10 +1,5 @@
 {{include file='common/head.html'}}
-
-<table width="{{$width}}" border="0" align="center">
-<tr>{{dispatch c='index' a='top'}}<td>
-</td></tr>
-  <tr>
-   <td valign='top' align='left'>{{$main}}</td>
-  </tr>
-</table>
+{{include file='common/head2.html'}}
+{{dispatch c='index' a='top'}}
+{{$main}}
 {{include file='common/foot.html'}}
